tryna fix this stupid shit on mobile

--- a/style.scss
+++ b/style.scss
@@ -105,7 +105,7 @@ body {
   right: 5px;
 
   font-size: 1.5rem;
-  line-height: 1rem;
+  // line-height: 1rem;
 }
 
 .contact > a {
